# zer0factor

./: .coverage  .gitignore  CONTRIBUTING.md  LICENSE  README.en.md  README.md  README.zh-CN.md  main.py  pyproject.toml
.claude/: settings.local.json
config/: settings.example.toml
docs/: stock_factor_evaluate_analysis.md
docs/plans/: 2026-04-28-environment-design.md  2026-04-28-environment-setup.md
docs/quantaalpha-prompts/: INDEX.md
docs/quantaalpha-prompts/source/quantaalpha/components/proposal/: prompts.yaml
docs/quantaalpha-prompts/source/quantaalpha/core/: prompts.py
docs/quantaalpha-prompts/source/quantaalpha/factors/coder/: prompts.yaml  qa_prompts.yaml
docs/skills/: 2026-05-03-factor-research-skill-design.md  2026-05-11-factor-research-skill-quantaalpha-fusion-design.md
docs/skills/factor-research/: SKILL.md
docs/skills/factor-research/agents/: openai.yaml
docs/skills/factor-research/references/: code-template.py  prompt-map.md  workflow-schema.md  zer0factor-standard.md
docs/skills/factor-research/scripts/: init_factor_research_workspace.py  validate_factors_json.py
src/: config.py  storage.py
tests/: test_config.py  test_factor_research_skill_scripts.py  test_factor_standard.py  test_storage.py
workspaces/factor-research-guosen-momentum/: approved.json  report.txt  status.json
workspaces/factor-research-guosen-momentum/code/: overnight_mom20.py  rank_mom120_20.py  ret20_0.py  ret240_20_remove_up_limit.py  smooth240_1.py
workspaces/factor-research-guosen-momentum/feedback/: round_feedback.md
workspaces/factor-research-guosen-momentum/results/: execution_feedback.json  factor_library.json
zer0factor/: config.py  storage.py
zer0factor/factor/: __init__.py
(+7 files in other folders)
