[project]
name = "zer0factor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "zer0share",
    "duckdb>=1.1.0",
    "pyarrow>=17.0.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "alphalens-reloaded>=0.4.0",
    "pyfolio-reloaded>=0.9.0",
    "plotly>=5.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "loguru>=0.7.0",
    "click>=8.1.0",
    "alphapurify>=0.1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]

[tool.uv.sources]
zer0share = { path = "../zer0share" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]

[tool.hatch.build.targets.wheel]
packages = ["zer0factor"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
